--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <div class="container">
         <h1>Kalkukator Relatif Prima</h1>
-        <input type="number" id="num1" placeholder="Masukkan bilangan pertama">
-        <input type="number" id="num2" placeholder="Masukkan bilangan kedua">
+        <input type="number" id="bil1" placeholder="Masukkan bilangan pertama">
+        <input type="number" id="bil2" placeholder="Masukkan bilangan kedua">
         <button onclick="cekRelatifPrima()">Cek</button>
         <div class="result" id="hasil"></div>
         <div class="factors" id="faktor"></div>
